--- a/index.html
+++ b/index.html
@@ -3,18 +3,42 @@
 <head>
 <title>CARD 4201 - Mod 3 premature Beats</title>
 <meta http-equiv="content-type" content="text/html; charset=us-ascii">
-<link href="scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<script src="scripts/dropdownMatchingData.js" type="text/javascript"></script>
+<link href="https://learn.bcit.ca/shared/scripts/bootstrap-2.3.1/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://learn.bcit.ca/shared/scripts/jquery/jquery-1.8.3.min.js" type="text/javascript"></script>
+
+<script src="https://learn.bcit.ca/shared/scripts/interactive/tableFill_DropDownSelect/dropdownMatching.js" type="text/javascript"></script>
 </head>
 <body style="margin:0px; padding:0px;">
-	<div id="content" >		
-				<div id="matchingTable"></div>		
-	</div>
-		
-<script src="scripts/jquery1-8-2.js" type="text/javascript"></script>
-<script src="scripts/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="scripts/dropdownMatching.js" type="text/javascript"></script>
-
+	<table>
+		<thead>
+			<tr>
+				<th>Questions</th>
+				<th>Answers</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>question 1</td>
+				<td>ansa</td>
+			</tr>
+			<tr>
+				<td>question 2</td>
+				<td>ansa</td>
+			</tr>
+			<tr>
+				<td>question 3</td>
+				<td>ans3</td>
+			</tr>
+			<tr>
+				<td>question 4</td>
+				<td>ans4</td>
+			</tr>
+			<tr>
+				<td>question 5</td>
+				<td>ans 5</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
 
