--- a/sampleTemplate.html
+++ b/sampleTemplate.html
@@ -6,6 +6,7 @@
 <link href="https://learn.bcit.ca/shared/scripts/bootstrap-2.3.1/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://learn.bcit.ca/shared/scripts/jquery/jquery-1.8.3.min.js" type="text/javascript"></script>
 
+<link href="https://learn.bcit.ca/shared/scripts/interactive/tableFill_DropDownSelect/dropdownMatching.css" rel="stylesheet" />
 <script src="https://learn.bcit.ca/shared/scripts/interactive/tableFill_DropDownSelect/dropdownMatching.js" type="text/javascript"></script>
 </head>
 <body style="margin:0px; padding:0px;">
