--- a/sampleTemplate.html
+++ b/sampleTemplate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>CARD 4201 - Mod 3 premature Beats</title>
-<meta http-equiv="content-type" content="text/html; charset=us-ascii">
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <link href="https://learn.bcit.ca/shared/scripts/bootstrap-2.3.1/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://learn.bcit.ca/shared/scripts/jquery/jquery-1.8.3.min.js" type="text/javascript"></script>
 
