--- a/testerHTMLs/tester-ddmv2-bs-select.html
+++ b/testerHTMLs/tester-ddmv2-bs-select.html
@@ -4,18 +4,17 @@
     <title>Drop Down TableFill Activity</title>
     <meta http-equiv="content-type" content="text/html; charset=us-ascii" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
-   
-    <link href="scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="scripts/bootstrap/css/bootstrap-select.min.css">
+    <script src="../scripts/libs/js/jquery1.9.1.min.js" type="text/javascript"></script>
+    <script src="../scripts/libs/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="../scripts/libs/js/bootstrap-select.min.js"></script>
 
-    <script src="scripts/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="scripts/bootstrap/js/bootstrap-select.min.js"></script>
+    <link href="../scripts/libs/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../scripts/libs/css/bootstrap-select.min.css" rel="stylesheet" >   
 
     <!-- LTC CP styles -->
-    <link rel="stylesheet" href="https://ltc.bcit.ca/public/v1/css/bcit.css"/>
+    <link href="https://ltc.bcit.ca/public/v1/css/bcit.css" rel="stylesheet"/>
     
-    <link href="scripts/ddm_v2.css" rel="stylesheet" />
+    <link href="../scripts/ddm_v2.css" rel="stylesheet" />
 
     <style>
       #ddMatching {
@@ -40,8 +39,8 @@
       <thead>
         <tr>
           <th class="_ddm" width="150px">Principles of TVIC</th>
-          <th class="_ddm" width="45%">Potential Barriers to Implementation in an ICU</th>
-          <th>Examples of implementation</th>
+          <th>Potential Barriers to Implementation in an ICU</th>
+          <th class="_ddm" width="45%">Examples of implementation</th>
         </tr>
       </thead>
       <tbody>
@@ -231,6 +230,6 @@
       </tbody>
     </table>
     
-    <script src="scripts/ddm_v2.js" type="text/javascript"></script> 
+    <script src="../scripts/ddm_v2.js" type="text/javascript"></script> 
   </body>
 </html>
