--- a/testerHTMLs/tester-ddmv2-bs-select.html
+++ b/testerHTMLs/tester-ddmv2-bs-select.html
@@ -4,12 +4,9 @@
     <title>Drop Down TableFill Activity</title>
     <meta http-equiv="content-type" content="text/html; charset=us-ascii" />
 
-    <script src="../scripts/libs/js/jquery1.9.1.min.js" type="text/javascript"></script>
-    <script src="../scripts/libs/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="../scripts/libs/js/bootstrap-select.min.js"></script>
-
-    <link href="../scripts/libs/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../scripts/libs/css/bootstrap-select.min.css" rel="stylesheet" >   
+    <script src="../dist/ddmlibs.min.js" type="text/javascript"></script>
+    
+    <link href="../dist/ddmlibs.min.css" rel="stylesheet"/>
 
     <!-- LTC CP styles -->
     <link href="https://ltc.bcit.ca/public/v1/css/bcit.css" rel="stylesheet"/>
@@ -22,23 +19,12 @@
       }
     </style>
 
-    <script type="text/javascript">
-      $(document).ready(function () {
-        // reshuffle tbody rows randomly
-        var tbody = $("table tbody");
-        tbody.find("tr").sort(function () {
-          return Math.round(Math.random()) - 0.5;
-        }).appendTo(tbody);
-
-      });
-    </script>
-
   </head>
   <body>
-    <table class="left">
+    <table class="left _randomize">
       <thead>
         <tr>
-          <th class="_ddm" width="150px">Principles of TVIC</th>
+          <th class="_ddm" width="200px">Principles of TVIC</th>
           <th>Potential Barriers to Implementation in an ICU</th>
           <th class="_ddm" width="45%">Examples of implementation</th>
         </tr>
